# object-tracker

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: Camera.cpp  Camera.hpp  main.cpp
